prow/cluster/gcsweb/gcsweb_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gcsweb
  namespace: gcs
  annotations:
    cloud.google.com/backend-config: '{"default": "gcsweb"}'
spec:
  type: NodePort
  selector:
    app: gcsweb
  ports:
  - port: 80
