prow/cluster/gcsweb/gcsweb_ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gcsweb-ing
  namespace: gcs
  annotations:
    kubernetes.io/ingress.global-static-ip-name: gcsweb
    networking.gke.io/managed-certificates: gcs-istio-io
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: gcsweb
      port:
        number: 80
