prow/cluster/gcsweb/gcsweb_ing_tmp.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/part-of: gcsweb
  name: gcsweb-ing-tmp
  namespace: gcs
  annotations:
    kubernetes.io/ingress.global-static-ip-name: k8s-fw-gcs-gcsweb-ing--c44bd72f22c73d37
    networking.gke.io/managed-certificates: gcs-istio-io
    kubernetes.io/ingress.class: "gce"
spec:
  backend:
    serviceName: gcsweb
    servicePort: 80
